--- a/beanies/scss/partials/_typography.scss
+++ b/beanies/scss/partials/_typography.scss
@@ -30,3 +30,18 @@ h6 {
 p {
     margin: 15px 0;
 }
+
+.simple-header {
+    @extend %bold;
+    margin: 0;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 3.5rem;
+
+    small {
+        @extend %light;
+        display: block;
+        text-transform: none;
+        font-size: 1rem;
+    }
+}
