--- a/beanies/scss/partials/_global.scss
+++ b/beanies/scss/partials/_global.scss
@@ -16,6 +16,11 @@ body {
     box-sizing: inherit;
 }
 
+::selection {
+    background: $color-primary;
+    color: #fff;
+}
+
 // Img adjustment
 img {
     max-width: 100%;
